namespace Application.UserFeedback.Models;

public class CreateUserFeedbackResponse
{
    public int UserFeedbackId { get; set; }
}
